minor fixes on mobile

--- a/public/Event_styles.css
+++ b/public/Event_styles.css
@@ -357,15 +357,20 @@
 }
 
 .location {
-    width: 70%;
+    width: 80%;
 }
 
   .icon-set-location {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-self: center !important;
     padding-bottom: 10%;
 }
+
+/* .icon-set-location a {
+  width: 262.5px !important;
+} */
   }
 
   @media screen and (min-width: 600px) and (max-width: 1600px) {
